# Mistral-Hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  REMOVE_ENV_FROM_HISTORY.md  app.py  chunks_service.py  config.py  docker-compose.yml  embed_service.py  erbol-test.ipynb  finetune_api.py  finetune_service.py  generate_data_service.py  knowledge.json  knowledge_service.py  main.py  ocr_service.py  output.json  paths.py  pyproject.toml  remove-env-from-history.ps1
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/: document-annotation.json  markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-1/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-10/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-100/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-101/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-102/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-103/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-104/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-105/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-106/: markdown.md
Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org).pdf/pages/page-107/: markdown.md
api/: library.py  reader.py
data/chunks/: Introduction to Probability by Joseph K. Blitzstein, Jessica Hwang (z-lib.org) (1).pdf.json
fine-tuning/: finetune.py  finetune_kaggle.ipynb
llm_agent/: __init__.py  llm_agent.py  state.py
llm_agent/prompts/: book-description.txt  general-textbook.txt  grade-knowledge.txt  math-textbook.txt
misc/: pipeline.drawio
services/: processing.py
static/: library.html  reader.html
static/css/: library.css  reader.css  style.css
static/js/: library.js  reader.js
(+197 files in other folders)
