[project]
name = "mistral-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-mistralai>=1.1.1",
    "langfuse>=3.14.5",
    "pydantic-settings>=2.13.1",
    "mistralai>=1.0.0",
    "wandb>=0.25.0",
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.0.0",
    "kaggle>=2.0.0",
    "sqlalchemy>=2.0.47",
]
