[project]
name = "mistral-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-mistralai>=1.1.1",
    "langchain-openai>=0.2.0",
    "langfuse>=3.14.5",
    "pydantic-settings>=2.13.1",
    "mistralai>=1.0.0",
    "sqlalchemy>=2.0.47",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
finetune = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
]

[dependency-groups]
finetune = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
]

# PyTorch CUDA: finetune group uses this index so torch installs with GPU support.
# Change cu124 to cu121, cu118, etc. if your CUDA version differs.
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
